# omnistack

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  dependency_manager.py  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  main.yml
ai_core/: __init__.py  code_optimizer.py  context_analyzer.py  deployment_optimizer.py  predictive_debugger.py  service_manager.py
api/: health.py  main.py  rate_limiter.py
auth/: auth_service.py
blockchain/contracts/: OmniStackMarketplace.sol
cache/: cache_manager.py
config/: config_manager.py
deployment/kubernetes/: api.yaml  deployment.yaml
docs/: api.md  architecture.md  contributing.md  deployment.md  development.md
ide_plugins/intellij/: build.gradle
ide_plugins/intellij/src/main/java/com/omnistack/plugin/: AnalysisResultsPanel.java  OmniStackPlugin.java
ide_plugins/vscode/: extension.js  package.json
logging/: logger.py
marketplace/frontend/: package.json
marketplace/frontend/src/: App.js
marketplace/frontend/src/components/: Marketplace.js
marketplace/frontend/src/hooks/: useContract.js
marketplace/frontend/src/utils/: format.js
monitoring/: error_tracking.py  metrics_collector.py  telemetry.py
tests/: test_ai_core.py  test_auth.py  test_cache.py  test_code_optimizer.py  test_context_analyzer.py  test_predictive_debugger.py
