[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnistack"
version = "1.0.0"
description = "AI-powered software development framework"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "JVR Software", email = "jvrsoftware@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.3",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "redis>=5.0.1",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "transformers>=4.37.1",
    "torch>=2.2.0",
    "numpy>=1.26.3",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://jvrsoftware.co.za"
Documentation = "https://github.com/LoSkroefie/omnistack"
Repository = "https://github.com/LoSkroefie/omnistack.git"
Issues = "https://github.com/LoSkroefie/omnistack/issues"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=omnistack"
testpaths = ["tests"]
